SG/4: updated to use starlink.cls

--- a/docs/sg/004/sg4p3e.tex
+++ b/docs/sg/004/sg4p3e.tex
@@ -1,6 +1,5 @@
 \chapter{The ADAM Libraries}
 \label{C_overlibs}
-\markboth{Programmers}{\stardocname}
 
 ADAM provides subroutine libraries which make various facilities available
 to application programmers.
@@ -91,7 +90,6 @@ database system, which is mainly used in the SCAR applications package, and the
 utilities, which are described in Starlink User Notes.
 
 \section{Parameter system}
-\markboth{Programmers}{\stardocname}
 
 This provides the mechanism for controlling the action of ADAM programs:
 \begin{quote}
@@ -107,7 +105,6 @@ This provides the mechanism for controlling the action of ADAM programs:
 \end{quote}
 
 \section{Data system}
-\markboth{Programmers}{\stardocname}
 
 This provides the dominant mechanism by which programs store and manipulate
 data.
@@ -168,7 +165,6 @@ The following facilities are available, listed using a top-down approach:
 
 \section{Message and Error systems}
 \label{S_errmess}
-\markboth{Programmers}{\stardocname}
 
 These related systems provide the {\em only} mechanism by which text should be
 sent to the command device (user terminal or batch log file).
@@ -198,7 +194,6 @@ The facilities involved are:
 
 \section{Graphics system}
 \label{S_graphics}
-\markboth{Programmers}{\stardocname}
 
 This consists of several facilities offering different levels of control,
 but all (except IDI) are based on the ISO standard Graphics Kernel System (GKS).
@@ -270,7 +265,6 @@ but all (except IDI) are based on the ISO standard Graphics Kernel System (GKS).
 \end{quote}
 
 \section{Input/output systems}
-\markboth{Programmers}{\stardocname}
 
 In general, data storage should be handled through the data system.
 However, there may be a need to handle files directly.
@@ -303,7 +297,6 @@ There may also be a need to access `foreign' magnetic tapes:
 \end{description}
 \end{quote}
 
-\markboth{Programmers}{\stardocname}
 \section{Database system}
 
 These are provided mainly for access to astronomical catalogues:
@@ -325,7 +318,6 @@ These are provided mainly for access to astronomical catalogues:
 \end{quote}
 
 \section{Utilities}
-\markboth{Programmers}{\stardocname}
 
 These differ from the libraries mentioned above in that they are not associated
 with parameters.
@@ -333,11 +325,11 @@ They are libraries which enable ADAM programs to do various tasks in a
 consistent way:
 \begin{quote}
 \begin{description}
-\item [CHR] \hfill [\xref{SUN/40}{sun40}]
+\item [CHR \hfill \xref{SUN/40}{sun40}]
 
  Manipulation of character strings, encoding and decoding numeric fields etc.
 
-\item [CNF] \hfill [SGP/5]
+\item [CNF \hfill SGP/5]
 
  Interchange of character strings between Fortran and C software modules.
 
